spacing fix

--- a/_src/_assets/styl/scaffolding.styl
+++ b/_src/_assets/styl/scaffolding.styl
@@ -44,6 +44,9 @@ textarea
     border-bottom: 1px solid rgba(255,255,255,.7)
     box-shadow: 0 1px 4px alpha($brand-dark, .1), 0 -1px 4px alpha($brand-dark, .2)
 
+.content.row
+    margin-top: 0
+
 @media only screen and (min-width: 40.625em) and (min-height: 650px)
     body
         position: relative
